--- a/index.html
+++ b/index.html
@@ -11,49 +11,127 @@
 
 <body>
     <header>
-        <h1>
-           <strong> Projeto de Armazenamento e Padronização dos Grampos <br>
-            Linha 407</h1></strong>
-
-        <h2>Mais segurança, organização e produtividade na linha de montagem G8.</h2>
+        <h1>Projeto de Melhoria <br> Linha 407</h1>
+        <p>Organização e segurança no armazenamento dos grampos de fixação do teto</p>
+        <a href="#contexto">Ver Solução</a>
+        <figure>
+            <img src="src/images/Grupo Evolução.JPG" alt="Imagem do Grupo SUMAM">
+            <figcaption>Grupo Evolução 407 - SUMAM</figcaption>
+        </figure>
     </header>
 
-    <main>
-        <section class="desafioSection">
-            <h2>O desafio</h2>
-            <p>Na linha de montagem 407 (modelo G8), os grampos usados para fixar o teto eram deixados no chão ou dentro
-                dos carros, sem um local definido para armazenamento. Isso causava riscos ergonômicos, acidentes e perda
-                de tempo de produção.</p>
-            <div class="desafioImages">
-                <figure>
-                    <img src="src/images/2.png" alt="Grampos de fixação teto">
-                    <figcaption>Grampos de fixação teto</figcaption>
-                </figure>
-                <figure>
-                    <img src="src/images/2.png" alt="Grampos de fixação teto">
-                    <figcaption>Grampos de fixação teto</figcaption>
-                </figure>
-                <figure>
-                    <img src="src/images/3.png" alt="Descritivo de fixação dos grampos">
-                    <figcaption>Descritivo de fixação dos grampos</figcaption>
-                </figure>
-            </div>
-            <ol>
-                <li>🚫 Risco de acidentes</li>
-                <li>⏱ Perda de 48 min/dia</li>
-                <li>⚙️ Falta de padrão</li>
-            </ol>
+    <!-- ======== CONTEXTO ======== -->
+    <section id="contexto">
+        <h2>Contexto do Problema</h2>
+        <p>Na linha de montagem do modelo G8, os grampos de fixação do teto eram usados
+            nos postos <strong>125</strong> e <strong>160</strong>, 
+            mas não havia local definido para armazená-los após o uso.</p>
+        <p>Isso causava desorganização, riscos de acidentes e perda de tempo — cerca de <strong>48 minutos por dia</strong>.</p>
 
-        </section>
+        <ul>
+            <li>❌ Falta de local fixo para armazenamento</li>
+            <li>❌ Transporte manual e demorado</li>
+            <li>❌ Risco ergonômico e acidentes</li>
+            <li>❌ Grampos danificados e espalhados</li>
+        </ul>
+    </section>
 
-        <section>
-            <h2>O Nosso Objetivo</h2>
-            <p>Criar um local de armazenamento para os grampos no posto 125 e 160;
-                Eliminar o uso de mão de obra, risco ergonômico e acidentes na movimentação dos grampos.
-            </p>
-        </section>
-    </main>
+    <!-- ======== ANÁLISE ======== -->
+    <section id="analise">
+        <h2>Análise e Diagnóstico</h2>
+        <p>Usamos ferramentas de qualidade para entender as causas do problema:</p>
+        <ul>
+            <li><strong>Diagrama de Ishikawa</strong>: analisamos Pessoas, Materiais e Metodologias</li>
+            <li><strong>5 Porquês</strong>: identificamos a causa raiz — falta de padronização e controle visual</li>
+        </ul>
+        <p>👉 A ausência de um processo claro gerava falhas na segurança, organização e eficiência.</p>
+    </section>
 
+    <!-- ======== PLANO ======== -->
+    <section id="plano">
+        <h2>Plano de Implementação</h2>
+        <ul>
+            <li>📦 Definição de locais fixos nos postos 125 e 160</li>
+            <li>🛞 Uso de embalagens adequadas com rodízios</li>
+            <li>📋 Controle visual e demarcação das áreas</li>
+            <li>👷 Treinamento dos operadores e padronização das rotinas</li>
+        </ul>
+        <p><strong>Objetivo:</strong> Garantir mais segurança, organização e eficiência.</p>
+    </section>
+
+    <!-- ======== ESTADO FUTURO ======== -->
+    <section id="estado-futuro">
+        <h2>Estado Futuro</h2>
+        <p>Com a solução implantada, os grampos passaram a ser armazenados corretamente, com rotina clara e segura.</p>
+        <ul>
+            <li>🚀 Redução de deslocamento: de 390 m → 130 m/dia</li>
+            <li>🕒 Ganho de 40 minutos/dia</li>
+            <li>✅ Processo padronizado e visualmente identificado</li>
+        </ul>
+    </section>
+
+    <!-- ======== RESULTADOS ======== -->
+    <section id="resultados">
+        <h2>Resultados (Antes e Depois)</h2>
+
+        <table class="data-table">
+            <tr>
+                <th>Indicador</th>
+                <th>Antes</th>
+                <th>Depois</th>
+            </tr>
+            <tr>
+                <td>Tempo perdido</td>
+                <td>48 min/dia</td>
+                <td><strong>8 min/dia</strong></td>
+            </tr>
+            <tr>
+                <td>Distância percorrida</td>
+                <td>390 m</td>
+                <td><strong>130 m</strong></td>
+            </tr>
+            <tr>
+                <td>Segurança</td>
+                <td>Grampos soltos</td>
+                <td><strong>Risco eliminado</strong></td>
+            </tr>
+            <tr>
+                <td>Organização</td>
+                <td>Sem local fixo</td>
+                <td><strong>Local definido e identificado</strong></td>
+            </tr>
+        </table>
+
+        <p>✅ Ganho total: mais eficiência, menos retrabalho e maior segurança.</p>
+    </section>
+
+    <!-- ======== 5S E DESPERDÍCIOS ======== -->
+    <section id="melhoria">
+        <h2>Aplicação dos 5S e Eliminação de Desperdícios</h2>
+        <ul>
+            <li>🧹 <strong>Descarte:</strong> apenas grampos necessários</li>
+            <li>📦 <strong>Organização:</strong> locais identificados</li>
+            <li>✨ <strong>Limpeza:</strong> ambiente livre de obstruções</li>
+            <li>⚙️ <strong>Padronização:</strong> mesmo processo para todos</li>
+            <li>🎓 <strong>Disciplina:</strong> treinamento contínuo</li>
+        </ul>
+
+        <p>Eliminamos desperdícios como espera, transporte desnecessário e movimentações extras.</p>
+    </section>
+
+    <!-- ======== CONCLUSÃO ======== -->
+    <section id="conclusao">
+        <h2>Conclusão</h2>
+        <p><em>"Onde há desafio, há oportunidade de crescer."</em></p>
+        <p><strong>Nós, do Grupo Evolução, evoluímos juntos!</strong></p>
+    </section>
+
+    <!-- ======== FOOTER ======== -->
+    <footer>
+        <p>📍 Projeto desenvolvido pelo <strong>Grupo SUMAM - Evolução</strong></p>
+        <p>Data: Junho de 2025</p>
+        <p>Linha de Montagem 407</p>
+    </footer>
 
 </body>
 
