Atualização com teste lightbox

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="src/css/reset.css">
     <link rel="stylesheet" href="src/css/style.css">
+    <link rel="stylesheet" href="src/Lightbox/css/lightbox.min.css">
     <title>Mostra SUMAM - Grupo Evolução</title>
 </head>
 
@@ -15,7 +16,8 @@
         <p>Organização e segurança no armazenamento dos grampos de fixação do teto</p>
         <a href="#contexto">Ver Solução</a>
         <figure>
-            <img src="src/images/Grupo Evolução.JPG" alt="Imagem do Grupo SUMAM">
+            <a href="src/images/Grupo Evolução.JPG" data-lightbox="GrupoEvolução">
+            <img src="src/images/Grupo Evolução.JPG" alt="Imagem do Grupo SUMAM"></a>
             <figcaption>Grupo Evolução 407 - SUMAM</figcaption>
         </figure>
     </header>
@@ -133,6 +135,8 @@
         <p>Linha de Montagem 407</p>
     </footer>
 
+    <!-- ======== SCRIPTS ======== -->
+    <script src="src/Lightbox/js/lightbox-plus-jquery.min.js"></script>
 </body>
 
 </html>
